--- a/node/restApi/package.json
+++ b/node/restApi/package.json
@@ -2,7 +2,7 @@
   "name": "restapi",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
